--- a/All SIH/nexus-main/nexus-main/src/Components/ClinicMoreDetails.css
+++ b/All SIH/nexus-main/nexus-main/src/Components/ClinicMoreDetails.css
@@ -22,7 +22,7 @@
     justify-content: space-around;
     padding: 2px;
     width: 50vw;
-    background-color: #00712d;
+    background-color: #3026c1;
     font-weight: 500;
     color: yellow;
     border-radius: 10px;
