--- a/All SIH/nexus-main/nexus-main/src/Components/BookAppoint.css
+++ b/All SIH/nexus-main/nexus-main/src/Components/BookAppoint.css
@@ -24,7 +24,7 @@
 }
 
 #doctag1{
-    background-image: linear-gradient(to right, rgb(135, 236, 101), #17844aae);
+    background-image: linear-gradient(to right, rgb(101, 184, 236), #17844aae);
     color: white;
     padding: 3px 5px;
     border-radius: 5px;
@@ -36,7 +36,7 @@
     margin-left: 7%;
 }
 #bookhead{
-    background-image: linear-gradient(to right, rgb(50, 241, 255),rgb(52, 143, 255), #0f0094d9);
+    background-image: linear-gradient(to right, rgb(255, 50, 231),rgb(158, 8, 239), #0f0094d9);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -59,11 +59,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #d5ed9f;
+    background-color: #8a97c0;
     height: 70vh;
-    width: 60vw;
+    width: 80vw;
     margin-top: 3%;
     border-radius: 15px;
+    box-shadow: #27272ad9;
     
 }
 .clinicinfo{
@@ -74,34 +75,45 @@
     margin-left: 3%;
     /* margin-top: 3%; */
     width: 30%;
+    border-radius: 20%;
 }
 .compage{
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* color: rgb(223, 17, 17); */
+
 }
 #doctexp{
-    font-size: large;
+    font-size: 18px;
     margin-top: 1%;
+    color: rgb(235, 4, 4);
+
 }
 #doctdetails{
     /* margin-top: 3%; */
     margin-left: 8%;
     margin-top: 3%;
+    color: rgb(59, 55, 55);
+
 }
 #doctname{
     font-size: xx-large;
     font-weight: bold;
     /* margin-bottom: 2%; */
     text-decoration: none;
-    color: rgb(0, 127, 0);
+    color: rgb(8, 8, 8);
 }
 .doctskills{
     margin-top: 2%;
-    font-size: large;
+    font-size: 16px;
+    color: rgb(59, 58, 61);
+
 }
 #verify{
     padding-left: 10px;
-    font-size: large;
+    font-size: 18px;
     /* margin-top: 1%; */
+    color: rgb(2, 105, 4);
+
 }
