--- a/All SIH/nexus-main/nexus-main/src/index.css
+++ b/All SIH/nexus-main/nexus-main/src/index.css
@@ -1,8 +1,8 @@
 :root body{
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
-  color: #a9cf23;
-  background-color: #fffbe6;
+  color: #40cf23;
+  background-color: #eeede1;
 
   font-synthesis: none;
   /* text-rendering: optimizeLegibility; */
